Opening the post in editing mode functionality is added

--- a/views/new_post.ejs
+++ b/views/new_post.ejs
@@ -12,8 +12,9 @@
         class="img1"
         onclick="file_upload('img1',this)"
         contenteditable="true"
+        style="background-image: url('<%= image %>')"
       ></div>
-      <h1 contenteditable="true" onchange="titleChange(this)">Title</h1>
+      <h1 contenteditable="true"><%= title %></h1>
       <input
         type="file"
         name="filename"
@@ -22,48 +23,13 @@
       />
     </div>
     <div class="content_post" contenteditable="true">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum officia
-        dolores maxime harum quas unde vero eius, pariatur nam architecto qui
-        autem sunt magnam dolorem ipsa, reiciendis illo quaerat excepturi!
-        Corrupti aliquid voluptate officiis quisquam. Eveniet sed nesciunt illum
-        impedit autem odio omnis et saepe! Nulla, quae? Tempora dolorum tenetur
-        saepe quidem porro repellat? Cum sapiente tempore ab ex recusandae.
-        Voluptates cumque, beatae voluptatem, rem perspiciatis deserunt vitae
-        dolorem voluptas itaque, quisquam aspernatur adipisci eligendi atque
-        accusantium. Necessitatibus veritatis, aliquid at dolores distinctio
-        neque eaque nam voluptas voluptatum saepe! Accusamus! Eius, perspiciatis
-        qui? Velit ad facere ipsum hic dolore sint molestiae doloribus debitis
-        nihil. Expedita harum tenetur omnis tempora et, quidem odit veniam autem
-        similique cum in debitis corrupti animi? Eos totam veniam repellat
-        fugiat praesentium inventore rerum voluptas nam pariatur, magni
-        accusantium repellendus quisquam. Odit provident sapiente, et aperiam
-        libero consequatur voluptates dolor officiis! Dolorem porro veniam
-        ratione tenetur! Libero laborum doloribus, animi quidem inventore
-        adipisci quae omnis! Nam, nobis dolores consectetur obcaecati eveniet
-        ullam ab nihil aperiam ex reprehenderit iure omnis tempore voluptas rem
-        architecto sit, perferendis aliquid. Expedita fugiat ad architecto
-        eveniet temporibus, id illum harum vero repellendus repudiandae
-        blanditiis error rerum quisquam dignissimos ut quas consequatur optio
-        similique maxime repellat iste. Quis saepe magni excepturi et. Ex,
-        eligendi fuga harum laborum tempore praesentium cum itaque quod
-        sapiente, asperiores aliquid cupiditate amet voluptatibus tenetur, culpa
-        quos non at beatae quo est! A repellendus magnam pariatur ex possimus.
-        Mollitia, non. Voluptates molestias quod repellendus. Reprehenderit
-        expedita quam magni vero, odit ut sapiente beatae animi. Error, fuga
-        quas ea iure reiciendis a libero vitae doloremque, iusto atque
-        praesentium incidunt! Iusto, nisi repellendus. Culpa at quae placeat qui
-        pariatur quis et consequatur reprehenderit rem, deserunt incidunt, ea
-        porro nesciunt voluptates? Minus blanditiis iste, maxime pariatur
-        accusamus sed? Molestiae, harum culpa?
-      </p>
+      <p><%= description %></p>
     </div>
   </div>
 </form>
 <script type="text/javascript">
-  var title = document.getElementById("img1");
-  var title_h1 = document.getElementsByTagName("h1");
-
+  var i = "<%= num %>";
+  i = parseInt(i);
   function file_upload(elem, event) {
     file_upload_block = document.getElementById("file_prompt");
     file_upload_block.click();
@@ -89,6 +55,7 @@
       postImage = "/Images/planets.jpg";
     }
     var json_content = {
+      id: ++i,
       title: postTitle,
       description: postContent,
       image: postImage,
