--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -292,6 +292,51 @@ textarea {
   top: 1em;
 }
 
+.new_post_options > .post_block:hover {
+  opacity: 0.2 !important;
+}
+
+.hover_block {
+  visibility: hidden;
+  position: relative;
+  align-content: space-around;
+  width: 15em;
+  height: 15em;
+  border-radius: 50%;
+  background-color: azure;
+  left: 4em;
+  margin-top: -22em;
+  padding: 1.5em;
+  box-shadow: 0px 0px 30px rgb(112, 182, 185);
+}
+
+.post_block_edit {
+  margin-bottom: 4.1em;
+}
+
+.edit {
+  position: relative;
+  align-content: space-around;
+  width: 5em;
+  height: 5em;
+  border-radius: 50%;
+  /* background-color: cadetblue; */
+  /* color: white; */
+  padding: 1em;
+  /* left: 5.5em;
+  top: 1em; */
+  /* box-shadow: 0px 0px 30px rgb(112, 182, 185); */
+}
+
+.edit > img {
+  width: 4em;
+  height: 4em;
+}
+
+.post_block_edit:hover .hover_block {
+  visibility: visible;
+}
+
 /* New Post */
 
 .new_post .cont_img {
@@ -305,7 +350,6 @@ textarea {
 .new_post .img1 {
   width: 100%;
   height: 100vh;
-  background-image: url("/Images/planets.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
