--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,8 +3,8 @@
     <ul>
         <li><a href=""><i class="fa fa-instagram"></i></a></li>
         <li><a href=""><i class="fa fa-youtube"></i></a></li>
-        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-        <li><a href=""><i class="fa fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/miyapuram-srinidhi-ab0530201/"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/srinidhi-miyapuram"><i class="fa fa-github"></i></a></li>
     </ul>
     <h5>&copy 2024 Company, Inc. All rights reserved.</h5>
 </footer>
