Updated the new post creation

--- a/views/new_post.ejs
+++ b/views/new_post.ejs
@@ -60,6 +60,7 @@
       image: postImage,
     };
 
+    document.getElementsByTagName("p")[0].innerText = postContent;
     var json_obj = JSON.stringify(json_content);
 
     fetch("/save", {
